[gd_scene load_steps=6 format=2]

[ext_resource path="res://Enemy_Elements/Boss_Abilities/BossAttack1.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Enemy_Abilities/boss_melee_warning.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Enemy_Abilities/boss_melee_activated.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Warning",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Active",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[node name="BossAttack1" type="Area2D"]
scale = Vector2( 20, 4 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Warning"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
disabled = true

[node name="WarningTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="DurationTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_BossAttack1_body_entered"]
[connection signal="timeout" from="WarningTimer" to="." method="_on_WarningTimer_timeout"]
[connection signal="timeout" from="DurationTimer" to="." method="_on_DurationTimer_timeout"]
